# discordBot

./: .envrc  .gitignore  Dockerfile  docker-compose.yml  main.py  run.sh  shell.nix
.devcontainer/: Dockerfile  docker-compose.yml  schema.sql
.github/: copilot-instructions.md
api/: main.py  pyproject.toml
api/src/: discord_bot.py  discord_utils.py  mcp_server.py  models.py  music_controls.py  music_message_controls.py  playback_router.py
api/src/music/: music_controls.py  my_voice_client.py  song_filesystem_service.py  song_queue.py
client/: package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  models.ts
client/src/components/: AddUrlToQueue.tsx  AllSongs.tsx  CurrentSong.tsx  PlaybackInfo.tsx  Slider.css  Slider.tsx  SongIcon.tsx  SongQueue.module.css  SongQueue.tsx  useInfoTask.ts
client/src/contexts/: MusicWebSocketProvider.tsx  WebSocketContext.tsx  WebSocketContextProvicer.tsx  useMusicWebSocketContexts.ts  useRefreshInfoTask.ts  useWebSocket.ts
client/src/features/: CustomToaster.tsx  playbackHooks.tsx
client/src/features/allSongs/: AllSongs.tsx  SongListItem.tsx
client/src/features/currentlyPlaying/: CurrentSong.tsx  PlaybackInfo.tsx  Slider.css  Slider.tsx
client/src/features/songQueue/: AddUrlToQueue.tsx  SongIcon.tsx  SongQueue.tsx
client/src/utils/: Spinner.tsx  SuspenseAndError.tsx  axiosClient.ts  getQueryClient.ts
src/: discord_bot.py  models.py  music_message_controls.py  playback_service.py  song_queue.py  websocket_server.py
