[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py",
    "fastapi[standard]",
    "fastmcp",
    "ffmpeg",
    "mutagen",
    "pydantic",
    "pynacl",
    "python-dotenv",
    "websockets",
    "yt-dlp",
]

[tool.uv.sources]
discord-py = { git = "https://github.com/rapptz/discord.py" }